# alberta-assisted-living

./: .gitignore  .mcp.json  .mcpbignore  AGENTS.md  COMPLIANCE.md  README.md  manifest.json  package-lock.json  package.json  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: constitution-sync.yml  release.yml
docs/: alberta-assisted-living-api-findings.md
scripts/: build.mjs  check-constitution.mjs
src/: config.mjs  errors.mjs  filters.mjs  format.mjs  geocoding.mjs  index.mjs  server.mjs
src/alberta_assisted_living/: __init__.py  config.py  filters.py  geocoding.py  server.py  tls.py
src/alberta_assisted_living/providers/: __init__.py  base.py
src/alberta_assisted_living/providers/alberta_ala/: __init__.py  client.py  provider.py
src/providers/: navigator-client.mjs  navigator-provider.mjs
test/: client.test.mjs  filters.test.mjs  geocoding.test.mjs  helpers.mjs  provider.test.mjs  tools.test.mjs
test/fixtures/alberta_ala/: facility_minimal.json  facility_rich.json  search_results.json
tests/: conftest.py  test_client.py  test_filters.py  test_geocoding.py  test_provider.py  test_tls.py  test_tools.py
tests/fixtures/alberta_ala/: bounding_box.json  search_empty.json
