[project]
name = "alberta-assisted-living"
version = "0.1.0"
description = "The Open State: Alberta Assisted Living - a Civic Access Protocol MCP server for Alberta's Assisted Living Navigator (local stdio)"
readme = "README.md"
authors = [
    { name = "The Open State" },
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp<3",
    "httpx>=0.28.1",
    "certifi>=2024.2.2",
]

[project.scripts]
alberta-assisted-living = "alberta_assisted_living:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
